@@ -5,6 +5,11 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 
+## Unreleased
+### Added
+- [UPGRADE] [HBSD13] Add a script to register new Vulture's HBSD13 own repositories (and disable previous ones)
+
+
 ## [2.0.11] - 2023-03-01
 ### Fixed
 - [HAPROXY] [SYSTEM_LOGGING] Internal Haproxy logging through Rsyslog didn't work
